k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: red-hospital
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth
        image: auth-service:latest

        ports:
        - containerPort: 8001
        command: ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8001"]
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: red-hospital
spec:
  selector:
    app: auth-service
  ports:
  - port: 8001
    targetPort: 8001
