k8s/citas-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citas-service
  namespace: red-hospital
spec:
  replicas: 1
  selector:
    matchLabels:
      app: citas-service
  template:
    metadata:
      labels:
        app: citas-service
    spec:
      containers:
      - name: citas
        image: citas-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8003
        command:
          - sh
          - -c
          - |
            python -c "
            import pyodbc
            conn = pyodbc.connect('DRIVER={ODBC Driver 18 for SQL Server};SERVER=mssql-citas;PORT=1433;UID=sa;PWD=YourPassword123!;TrustServerCertificate=yes;Encrypt=no;DATABASE=master', autocommit=True)
            conn.execute(\"IF NOT EXISTS (SELECT name FROM sys.databases WHERE name='db_citas') CREATE DATABASE db_citas\")
            conn.close()
            " && python manage.py migrate && python manage.py runserver 0.0.0.0:8003
---
apiVersion: v1
kind: Service
metadata:
  name: citas-service
  namespace: red-hospital
spec:
  selector:
    app: citas-service
  ports:
  - port: 8003
    targetPort: 8003
