k8s/config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: red-hospital
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: config-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
        volumeMounts:
        - name: configs
          mountPath: /app/configs
      volumes:
      - name: configs
        configMap:
          name: config-server-files
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: red-hospital
spec:
  selector:
    app: config-server
  ports:
  - port: 8888
    targetPort: 8888
