k8s/db-postgres-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-auth
  namespace: red-hospital
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-auth
  template:
    metadata:
      labels:
        app: postgres-auth
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-auth
  namespace: red-hospital
spec:
  selector:
    app: postgres-auth
  ports:
  - port: 5432
    targetPort: 5432
