k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: red-hospital
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: gateway:latest

        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: red-hospital
spec:
  selector:
    app: gateway
  ports:
  - port: 8000
    targetPort: 8000
  type: LoadBalancer
