k8s/medicamentos-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medicamentos-service
  namespace: red-hospital
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medicamentos-service
  template:
    metadata:
      labels:
        app: medicamentos-service
    spec:
      containers:
      - name: medicamentos
        image: medicamentos-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8005
        command: ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8005"]
---
apiVersion: v1
kind: Service
metadata:
  name: medicamentos-service
  namespace: red-hospital
spec:
  selector:
    app: medicamentos-service
  ports:
  - port: 8005
    targetPort: 8005
