k8s/pacientes-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacientes-service
  namespace: red-hospital
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pacientes-service
  template:
    metadata:
      labels:
        app: pacientes-service
    spec:
      containers:
      - name: pacientes
        image: pacientes-service:latest

        ports:
        - containerPort: 8002
        command: ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8002"]
---
apiVersion: v1
kind: Service
metadata:
  name: pacientes-service
  namespace: red-hospital
spec:
  selector:
    app: pacientes-service
  ports:
  - port: 8002
    targetPort: 8002
